BB-1264 - get task template endpoint contract tests
