# src/Generated/Exception/GetTaskTemplateCollectionInternalServerErrorException.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace Datenkraft\Backbone\Client\ControlServerApi\Generated\Exception;
+
+class GetTaskTemplateCollectionInternalServerErrorException extends InternalServerErrorException
+{
+    private $errorResponse;
+    public function __construct(\Datenkraft\Backbone\Client\ControlServerApi\Generated\Model\ErrorResponse $errorResponse)
+    {
+        parent::__construct('Server error', 500);
+        $this->errorResponse = $errorResponse;
+    }
+    public function getErrorResponse()
+    {
+        return $this->errorResponse;
+    }
+}
